--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 
   <section class="layers">
     <div class="layers__container">
-      <div class="layers__item layer-1" style="background-image: url(img/layer-1.jpg);"></div>
+      <div class="layers__item layer-1" style="background-image"></div>
+  
       <div class="layers__item layer-3">
         <div class="hero-content">
           <h1>Авантюра <span>Бот</span></h1>
@@ -23,19 +24,27 @@
           <button class="button-start">Выбрать экскурсию</button>
         </div>
       </div>
-      <div class="layers__item layer-4">
-        <div class="canvas-container">
-          <canvas class="rain"></canvas>
-        </div>
+      <div class="layers__item layer-4 rain-container">
+        <canvas class="rain"></canvas>
       </div>
       <div class="layers__item layer-6" style="background-image: url(img/layer-6.png);"></div>
-      <div id="leafContainer"></div>
     </div>
   </section>
 
   <script src="js/app.js"></script>
-  <script src="leaf/leaves.js" ></script>
-
+  <script type="importmap">
+    {
+        "imports": {
+            "three": "https://unpkg.com/three@0.139.0/build/three.module.js",
+            "OrbitControls": "https://unpkg.com/three@0.139.0/examples/jsm/controls/OrbitControls.js",
+            "GLTFLoader": "https://unpkg.com/three@0.139.0/examples/jsm/loaders/GLTFLoader.js",
+            "RectAreaLightHelper": "https://unpkg.com/three@0.139.0/examples/jsm/helpers/RectAreaLightHelper.js",
+            "RectAreaLightUniformsLib": "https://unpkg.com/three@0.139.0/examples/jsm/lights/RectAreaLightUniformsLib.js"
+        }
+    }
+  </script>
+  <script type="module" src="weather/month.js"></script>
+  
 </body>
 
 </html>
